redid action mimics Painter tool options no longer says color set SCSS adjusted for v1.1.9

--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -18,3 +18,9 @@
     height: 30rem !important; 
     width: 90rem !important;
 }
+
+.rcColorField > button {
+    height: 30rem !important; 
+    width: 90rem !important;
+    padding-right: 1.5rem;
+}
