Palette Editor menu can create palettes

--- a/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
+++ b/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
@@ -34,7 +34,7 @@
     position: absolute;
     top: 56rem;
     left: 420rem;
-    height: 650rem;
+    height: 680rem;
 }
 
 .header {
@@ -66,8 +66,8 @@
 .sliderSpacerLeft {
     width: 100rem;
 }
-.sliderSpacerRight {
-    width: 25rem;
+.savePaletteSpacer {
+    width: 50rem;
 }
 
 .probabilityWeightWidth {
