--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -104,3 +104,8 @@
     padding-right: 0!important;    
     padding-bottom: 0!important;
 }
+
+.dropdownText {
+    color: white !important;
+    font-size: 10rem;
+}
