SIP colors reflect changes from palettes resetting palette removes custom mesh color for that channel restets completely if all custom color is back to vanilla

--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -109,3 +109,8 @@
     color: white !important;
     font-size: 10rem;
 }
+
+.largeDropdownText {
+    color: white !important;
+    font-size: 14rem;
+}
