--- a/Recolor/UI/src/mods/PaletteBoxComponent/PaletteBoxStyles.module.scss
+++ b/Recolor/UI/src/mods/PaletteBoxComponent/PaletteBoxStyles.module.scss
@@ -22,3 +22,8 @@
     border-top-left-radius: 0rem 0rem !important;
     border-bottom-left-radius: 0rem 0rem !important;
 }
+
+.subcategory {
+    height: 15rem !important; 
+    width: 90rem !important;
+}
