ui fixes to prevent changes to color channels while palette is assigned progress towards buttons for palettes

--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -38,6 +38,10 @@
     width: 24rem;
 }
 
+.ButtonWidth {
+    width: 28rem;
+}
+
 .rcColorField {
     height: 30rem !important; 
     width: 90rem !important;
@@ -47,6 +51,7 @@
     height: 30rem !important; 
     width: 90rem !important;
     padding-right: 1.5rem;
+    opacity: 1 !important
 }
 
 .rcColorFieldInput {
