can edit an existing palette prefab  existing does not update ui bottons selected based on editting palette prefab button alignments

--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -72,6 +72,14 @@
     height: 37.5rem; 
 }
 
+.belowPaletteArea {
+    height: 28rem; 
+}
+
+.belowSwapButtonSmall {
+    height: 10rem; 
+}
+
 .swapButtonWidth {
     width: 34rem; 
 }
