refactor palettes UI system in partial classes converted filter serialization to names instead of prefabBases lots of progress for filters

--- a/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
+++ b/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
@@ -105,3 +105,13 @@
 .subcategoryDropwdownWidth {
     width: 125rem;
 }
+
+.filterChoicesDropdown {
+    width: 350rem;
+    height: 35rem;
+}
+
+.filterChoicesIcon {
+    width: 30rem;
+    height: 30rem;
+}
