--- a/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
+++ b/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
@@ -115,3 +115,10 @@
     width: 30rem;
     height: 30rem;
 }
+
+.filterRowGroup {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
