--- a/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
+++ b/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
@@ -83,11 +83,22 @@
     justify-content: center !important;
 }
 
+.colorSpacerLeft {
+    width: 125rem;
+}
 .sliderSpacerLeft {
-    width: 100rem;
+    width: 175rem;
 }
 .smallSpacer {
     width: 10rem;
+}
+
+.spacer15 {
+    width: 15rem;
+}
+
+.spacer25 {
+    width: 25rem;
 }
 
 .wideSpacer {
@@ -95,7 +106,7 @@
 }
 
 .probabilityWeightWidth {
-    width: 200rem;
+    width: 150rem;
 }
 
 .filterTypeWidth {
