implemented localization for most if not all fixed strings progress towards localization of input fields

--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -64,6 +64,10 @@
     width: 350rem !important;
 }
 
+.localeCodeWidth {
+    width: 100rem;
+}
+
 .colorFieldWidth {
     width: 90rem !important;
 }
