more progress for localization

--- a/Recolor/UI/src/mods/Domain/ColorFields.module.scss
+++ b/Recolor/UI/src/mods/Domain/ColorFields.module.scss
@@ -64,6 +64,11 @@
     width: 350rem !important;
 }
 
+.descriptionFieldInput {
+    height: 90rem !important; 
+    width: 350rem !important;
+}
+
 .localeCodeWidth {
     width: 100rem;
 }
