--- a/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
+++ b/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
@@ -122,6 +122,11 @@
     height: 35rem;
 }
 
+.filterChoicesDropdownToolOptions {
+    width: 335rem;
+    height: 35rem;
+}
+
 .filterChoicesIcon {
     width: 30rem;
     height: 30rem;
