fix empty translations producing locale entries when editting fix editing palettes or subcategories with translations adds them to saved locale list fix deploying empty locale files fix leftover console log fix clicking generate new subcategory doesn't change font size for color and probability weight

--- a/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
+++ b/Recolor/UI/src/mods/PalettesMenuComponent/PaletteMenuStyles.module.scss
@@ -70,11 +70,12 @@
     align-items: center;
     text-align: left;
     padding-top: 2rem;
-    font-size: 18rem !important;
+    font-size: auto; 
     font-weight: bold;
     padding-bottom: 5rem;
     height: 35rem;
     flex-grow: 1;
+    height: auto !important;
 }
 
 .centeredSubTitle {
